# Cpp-Training

./: .gitignore  CMakeLists.txt  Makefile  PLAN.md  QUICKSTART.md  README.md
docs/: FINAL_SUMMARY.md  GUI_NETWORK_USAGE.md  PROGRESS.md  SUMMARY.md  UPDATE_20260506.md
gui/: CardWidgets.cpp  CardWidgets.h  GuiUtils.cpp  GuiUtils.h  InfoPages.cpp  LocalGameController.cpp  MagicTrickWindow.cpp  MagicTrickWindow.h  NetworkGamePage.cpp  main.cpp  qt_magic_trick.cpp  qt_magic_trick.pro  resources.qrc
include/: Card.h  ConfigurableCardTrick.h  Deck.h  Exceptions.h  Leaderboard.h  MagicTrick.h  NetworkGame.h  PileChoice.h  ReplayManager.h  ThreePileCardTrick.h  TwentyOneCardTrick.h  TwentySevenCardTrick.h  Utils.h
src/: Card.cpp  ConfigurableCardTrick.cpp  Leaderboard.cpp  NetworkGame.cpp  PileChoice.cpp  ReplayManager.cpp  ThreePileCardTrick.cpp  TwentyOneCardTrick.cpp  TwentySevenCardTrick.cpp  Utils.cpp  main_console.cpp  main_enhanced.cpp  test_main.cpp
tools/: build_opening_report.py
资料/: 21张牌魔术.docx  21张牌魔术_开题报告.docx  C++实训任务书.docx  开题报告.doc
